@@ -137,7 +137,7 @@ table.pub td.ref:nth-of-type(1) a {color:#e8e8e8;}
 table.snap				{font-size:0.9em; margin:0 auto; width:100%; word-break:break-all;}
 table.snap td			{padding:10px 10px 10px 0; line-height:16px;}
 table.snap td:nth-of-type(2) {font-size:2em; padding-right:0; line-height:16px;}
-table.snap.countries	{table-layout:fixed;}
+table.snap.countries	{table-layout:fixed; word-break:break-word;}
 table.snap.countries th	{font-size:1.6em; padding:5px 30px 20px 0; text-align:left;}
 table.snap.countries td	{border-bottom:3px solid #1d2550; padding:10px 5px 10px 0;}
 table.snap.countries td.cc				{padding:0;}
