@@ -1,6 +1,12 @@
+Development Portal (2018-03-15 shi)
+==============================
+Fixed result period dates to display even when there is no data
+
+
 Development Portal (2018-03-14 shi)
 ==============================
 Fixed word-break for datasets in Dash
+Fixed word-break for countries table in Dash
 
 
 Development Portal (2018-03-12 shi)
